--- a/pedidos.html
+++ b/pedidos.html
@@ -14,7 +14,7 @@
     <h2>EasyQode</h2>
     <a href="produtos.html">Produtos</a>
     <a href="#" class="active">Pedidos</a>
-    <a href="#">Usuários</a>
+    <a href="usuarios.html">Usuários</a>
     <!-- Usuário logado -->
     <div class="user">
       <p><strong>Maria Eduarda</strong><br><small>prof.mariacardoso@unyleya.edu.br</small></p>
