--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div class="sidebar">
     <h2>EasyQode</h2>
     <a href="produtos.html">Produtos</a>
-    <a href="#" class="active">Pedidos</a>
+    <a href="index.html" class="active">Pedidos</a>
     <a href="usuarios.html">Usuários</a>
     <!-- Usuário logado -->
     <div class="user">
