--- a/produtos.html
+++ b/produtos.html
@@ -11,7 +11,7 @@
     <h2>EasyQode</h2>
     <a href="#" class="active">Produtos</a>
     <a href="index.html">Pedidos</a>
-    <a href="#">Usuários</a>
+    <a href="usuarios.html">Usuários</a>
 
     <!-- Info do usuário -->
     <div class="user">
