--- a/usuarios.html
+++ b/usuarios.html
@@ -5,14 +5,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Cadastro de Usuários</title>
   <link rel="stylesheet" href="style.css" />
+  <!-- Ícones (Font Awesome) -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
   <!-- Menu lateral -->
   <div class="sidebar">
     <h2>EasyQode</h2>
-    <a href="produtos.html">Produtos</a>
-    <a href="index.html" class="active">Pedidos</a>
-    <a href="usuarios.html">Usuários</a>
+    <a href="produtos.html"><i class="fas fa-box"></i>Produtos</a>
+    <a href="index.html" class="active"><i class="fas fa-receipt"></i>Pedidos</a>
+    <a href="usuarios.html"><i class="fas fa-users"></i>Usuários</a>
     <!-- Usuário logado -->
     <div class="user">
       <p><strong>Maria Eduarda</strong><br><small>prof.mariacardoso@unyleya.edu.br</small></p>
