--- a/produtos.html
+++ b/produtos.html
@@ -4,14 +4,16 @@
   <meta charset="UTF-8">
   <title>EasyQode - Produtos</title>
   <link rel="stylesheet" href="style.css">
+  <!-- Ícones (Font Awesome) -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
   <!-- Menu lateral -->
   <div class="sidebar">
     <h2>EasyQode</h2>
-    <a href="#" class="active">Produtos</a>
-    <a href="index.html">Pedidos</a>
-    <a href="usuarios.html">Usuários</a>
+    <a href="produtos.html"><i class="fas fa-box"></i>Produtos</a>
+    <a href="index.html" class="active"><i class="fas fa-receipt"></i>Pedidos</a>
+    <a href="usuarios.html"><i class="fas fa-users"></i>Usuários</a>
 
     <!-- Info do usuário -->
     <div class="user">
