--- a/produtos.html
+++ b/produtos.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>EasyQode - Produtos</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="./css/style.css">
   <!-- Ícones (Font Awesome) -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
@@ -54,6 +54,6 @@
     </ul>
   </div>
 
-  <script src="produtos.js"></script>
+  <script src="./js/produtos.js"></script>
 </body>
 </html>
